Only do a repolish() of the widget if it was already polished

By ensuring that the widget is already polished before doing a repolish it
means that if you reset the stylesheet then it unsets any changes that
the stylesheet had applied to the widget.

Task-number: QTBUG-18958

Change-Id: Ie0aeda0dac9f2211b7feca138c115cf2b48aac80
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>

cregit: 9babaac16da14657ccf8629419328bf05c866eed https://github.com/qt/qtbase/commit/9babaac16da14657ccf8629419328bf05c866eed